# gnome-desktop-branding

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  gnome-mimeapps.list  meson.build  mimeapps.list  mkrelease.sh  solus-gnome-mimeapps.list
env/: 60-gnome-gl.sh  60-qadwaitadecorations.sh  meson.build
schemas/: Makefile.am  meson.build  org.gnome.Terminal.gschema.override  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.peripherals.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.keybindings.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.login-screen.override  org.gnome.mutter.gschema.override  org.gnome.nautilus.preferences.gschema.override  org.gnome.shell.extensions.user-theme.gschema.override  org.gnome.shell.gschema.override  org.gtk.settings.file-chooser.gschema.override
schemas/fortitude/: meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.shell.extensions.trayIconsReloaded.gschema.override  org.gnome.shell.extensions.user-theme.gschema.override  org.gnome.shell.gschema.override
schemas/gdm/: meson.build
schemas/gnome/: Makefile.am  com.worldwidemann.plotinus.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.shell.extensions.dash-to-dock.gschema.override  org.gnome.shell.extensions.topicons.gschema.override  org.gnome.shell.gschema.override
schemas/gnome/extensions/: Makefile.am  org.gnome.shell.extensions.dynamic-panel-transparency.gschema.override  org.gnome.shell.extensions.user-theme.gschema.override
schemas/legacy/: meson.build  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.shell.gschema.override
schemas/livecd/: Makefile.am  meson.build  org.gnome.desktop.screensaver.gschema.override  org.gnome.login-screen.gschema.override  org.gnome.shell.gschema.override
schemas/material/: Makefile.am  com.worldwidemann.plotinus.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.nautilus.icon-view.gschema.override  org.gnome.nautilus.list-view.gschema.override  org.gnome.nautilus.preferences.gschema.override  org.gnome.settings-daemon.plugins.media-keys.custom-keybindings.custom0.gschema.override  org.gnome.settings-daemon.plugins.media-keys.gschema.override  org.gnome.shell.extensions.topicons.gschema.override  org.gnome.shell.extensions.user-theme.gschema.override  org.gnome.shell.gschema.override
schemas/minimal/: meson.build  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.gedit.preferences.editor.override  org.gnome.nautilus.preferences.gschema.override  org.gnome.shell.gschema.override
