AC_INIT([GNOME Desktop Branding], 1, [joshua@solus-project.com], [gnome-desktop-branding], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                icon/Makefile
                schemas/Makefile
                schemas/gnome/Makefile
                schemas/livecd/Makefile])
AC_OUTPUT
