AC_INIT([GNOME Desktop Branding], 9, [joshua@solus-project.com], [gnome-desktop-branding], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-ustar])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                schemas/Makefile
                schemas/gnome/Makefile
                schemas/livecd/Makefile
                schemas/material/Makefile])
AC_OUTPUT
